j ai fini le partie de faire une fonction qui ouvrir les questions et je vais change le fonction qui ouvrir le categorie des questions

--- a/public/index.html
+++ b/public/index.html
@@ -113,73 +113,148 @@
             <p class="font-Mont text-4xl text-gray w-1/2 text-center  ">USER RIGHTS</p>
             <div class="w-[80%] h-[70%] flex flex-col justify-between  gap-4 mb-10 ">
                 <div class="list_user_rights">
-                <div
+                <div onclick="ouvrir_qustion(1)" 
                     class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
                     <p class=" pl-3 text-3xl font-Mont">why i can trust in our company ?</p>
                     <img class="opacity-60 w-14 h-14 hover:opacity-100" src="/public/assets/images/FAQs/ouvrir .png"
                         alt="ouvrir">
                 </div>
-                <div class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
+                <div id="Q1" class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
                     <p class="mx-9 mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vero vel dignissimos quod aliquid, deleniti molestiae doloremque laboriosam. Quam accusantium cumque et repudiandae minus odio autem quo blanditiis. Dolore, tempore?lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime doloremque modi, quo, architecto veritatis, inventore consectetur magnam dolores ipsam enim iure velit nesciunt earum id? Voluptates tempore sed necessitatibus omnis.</p>
                 </div>
             </div>
                 <div>
-                <div
+                <div onclick="ouvrir_qustion(2)" 
                     class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
                     <p class=" pl-3 text-3xl font-Mont">why i can trust in our company ?</p>
                     <img class="opacity-60 w-14 h-14 hover:opacity-100" src="/public/assets/images/FAQs/ouvrir .png"
                         alt="ouvrir">
                 </div>
-                <div class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
+                <div id="Q2" class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
                     <p class="mx-9 mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vero vel dignissimos quod aliquid, deleniti molestiae doloremque laboriosam. Quam accusantium cumque et repudiandae minus odio autem quo blanditiis. Dolore, tempore?lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime doloremque modi, quo, architecto veritatis, inventore consectetur magnam dolores ipsam enim iure velit nesciunt earum id? Voluptates tempore sed necessitatibus omnis.</p>
                 </div>
             </div>
                 <div>
-                <div
+                <div onclick="ouvrir_qustion(3)" 
                     class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
                     <p class=" pl-3 text-3xl font-Mont">why i can trust in our company ?</p>
                     <img class="opacity-60 w-14 h-14 hover:opacity-100" src="/public/assets/images/FAQs/ouvrir .png"
                         alt="ouvrir">
                 </div>
-                <div class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
+                <div id="Q3" class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
                     <p class="mx-9 mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vero vel dignissimos quod aliquid, deleniti molestiae doloremque laboriosam. Quam accusantium cumque et repudiandae minus odio autem quo blanditiis. Dolore, tempore?lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime doloremque modi, quo, architecto veritatis, inventore consectetur magnam dolores ipsam enim iure velit nesciunt earum id? Voluptates tempore sed necessitatibus omnis.</p>
                 </div>
             </div>
                 <div>
-                <div
+                <div onclick="ouvrir_qustion(4)" 
                     class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
                     <p class=" pl-3 text-3xl font-Mont">why i can trust in our company ?</p>
                     <img class="opacity-60 w-14 h-14 hover:opacity-100" src="/public/assets/images/FAQs/ouvrir .png"
                         alt="ouvrir">
                 </div>
-                <div class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
+                <div id="Q4" class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
                     <p class="mx-9 mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vero vel dignissimos quod aliquid, deleniti molestiae doloremque laboriosam. Quam accusantium cumque et repudiandae minus odio autem quo blanditiis. Dolore, tempore?lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime doloremque modi, quo, architecto veritatis, inventore consectetur magnam dolores ipsam enim iure velit nesciunt earum id? Voluptates tempore sed necessitatibus omnis.</p>
                 </div>
             </div>
                 <div>
-                <div
+                <div onclick="ouvrir_qustion(5)" 
                     class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
                     <p class=" pl-3 text-3xl font-Mont">why i can trust in our company ?</p>
                     <img class="opacity-60 w-14 h-14 hover:opacity-100" src="/public/assets/images/FAQs/ouvrir .png"
                         alt="ouvrir">
                 </div>
-                <div class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
+                <div id="Q5" class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
                     <p class="mx-9 mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vero vel dignissimos quod aliquid, deleniti molestiae doloremque laboriosam. Quam accusantium cumque et repudiandae minus odio autem quo blanditiis. Dolore, tempore?lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime doloremque modi, quo, architecto veritatis, inventore consectetur magnam dolores ipsam enim iure velit nesciunt earum id? Voluptates tempore sed necessitatibus omnis.</p>
                 </div>
             </div>
                 <div>
-                <div
+                <div onclick="ouvrir_qustion(6)" 
                     class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
                     <p class=" pl-3 text-3xl font-Mont">why i can trust in our company ?</p>
                     <img class="opacity-60 w-14 h-14 hover:opacity-100" src="/public/assets/images/FAQs/ouvrir .png"
                         alt="ouvrir">
                 </div>
-                <div class="border-gray border-x-4 border-b-4 rounded-xl hidden">
+                <div id="Q6" class="border-gray border-x-4 border-b-4 rounded-xl hidden">
                     <p class="mx-9 mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vero vel dignissimos quod aliquid, deleniti molestiae doloremque laboriosam. Quam accusantium cumque et repudiandae minus odio autem quo blanditiis. Dolore, tempore?lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime doloremque modi, quo, architecto veritatis, inventore consectetur magnam dolores ipsam enim iure velit nesciunt earum id? Voluptates tempore sed necessitatibus omnis.</p>
                 </div>
             </div>
             </div>
         </div>
+        <div id="UserRights"
+        class=" hidden  w-[90%] right-0 my-20 justify-self-center border-4 border-lBrown rounded-3xl shadow-md shadow-gray flex  items-center flex-col gap-6 pt-5 ">
+        <div class=" w-32 h-32 flex justify-center items-center border-lBrown border-2 rounded-full  ">
+            <img src="/public/assets/images/FAQs/support.png" class="w-24 h-24" alt="">
+        </div>
+        <p class="font-Mont text-4xl text-gray w-1/2 text-center  ">USER RIGHTS</p>
+        <div class="w-[80%] h-[70%] flex flex-col justify-between  gap-4 mb-10 ">
+            <div class="list_user_rights">
+            <div onclick="ouvrir_qustion(1)" 
+                class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
+                <p class=" pl-3 text-3xl font-Mont">why i can trust in our company ?</p>
+                <img class="opacity-60 w-14 h-14 hover:opacity-100" src="/public/assets/images/FAQs/ouvrir .png"
+                    alt="ouvrir">
+            </div>
+            <div id="Q1" class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
+                <p class="mx-9 mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vero vel dignissimos quod aliquid, deleniti molestiae doloremque laboriosam. Quam accusantium cumque et repudiandae minus odio autem quo blanditiis. Dolore, tempore?lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime doloremque modi, quo, architecto veritatis, inventore consectetur magnam dolores ipsam enim iure velit nesciunt earum id? Voluptates tempore sed necessitatibus omnis.</p>
+            </div>
+        </div>
+            <div>
+            <div onclick="ouvrir_qustion(2)" 
+                class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
+                <p class=" pl-3 text-3xl font-Mont">why i can trust in our company ?</p>
+                <img class="opacity-60 w-14 h-14 hover:opacity-100" src="/public/assets/images/FAQs/ouvrir .png"
+                    alt="ouvrir">
+            </div>
+            <div id="Q2" class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
+                <p class="mx-9 mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vero vel dignissimos quod aliquid, deleniti molestiae doloremque laboriosam. Quam accusantium cumque et repudiandae minus odio autem quo blanditiis. Dolore, tempore?lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime doloremque modi, quo, architecto veritatis, inventore consectetur magnam dolores ipsam enim iure velit nesciunt earum id? Voluptates tempore sed necessitatibus omnis.</p>
+            </div>
+        </div>
+            <div>
+            <div onclick="ouvrir_qustion(3)" 
+                class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
+                <p class=" pl-3 text-3xl font-Mont">why i can trust in our company ?</p>
+                <img class="opacity-60 w-14 h-14 hover:opacity-100" src="/public/assets/images/FAQs/ouvrir .png"
+                    alt="ouvrir">
+            </div>
+            <div id="Q3" class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
+                <p class="mx-9 mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vero vel dignissimos quod aliquid, deleniti molestiae doloremque laboriosam. Quam accusantium cumque et repudiandae minus odio autem quo blanditiis. Dolore, tempore?lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime doloremque modi, quo, architecto veritatis, inventore consectetur magnam dolores ipsam enim iure velit nesciunt earum id? Voluptates tempore sed necessitatibus omnis.</p>
+            </div>
+        </div>
+            <div>
+            <div onclick="ouvrir_qustion(4)" 
+                class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
+                <p class=" pl-3 text-3xl font-Mont">why i can trust in our company ?</p>
+                <img class="opacity-60 w-14 h-14 hover:opacity-100" src="/public/assets/images/FAQs/ouvrir .png"
+                    alt="ouvrir">
+            </div>
+            <div id="Q4" class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
+                <p class="mx-9 mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vero vel dignissimos quod aliquid, deleniti molestiae doloremque laboriosam. Quam accusantium cumque et repudiandae minus odio autem quo blanditiis. Dolore, tempore?lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime doloremque modi, quo, architecto veritatis, inventore consectetur magnam dolores ipsam enim iure velit nesciunt earum id? Voluptates tempore sed necessitatibus omnis.</p>
+            </div>
+        </div>
+            <div>
+            <div onclick="ouvrir_qustion(5)" 
+                class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
+                <p class=" pl-3 text-3xl font-Mont">why i can trust in our company ?</p>
+                <img class="opacity-60 w-14 h-14 hover:opacity-100" src="/public/assets/images/FAQs/ouvrir .png"
+                    alt="ouvrir">
+            </div>
+            <div id="Q5" class="border-gray border-x-4 border-b-4 rounded-xl hidden ">
+                <p class="mx-9 mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vero vel dignissimos quod aliquid, deleniti molestiae doloremque laboriosam. Quam accusantium cumque et repudiandae minus odio autem quo blanditiis. Dolore, tempore?lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime doloremque modi, quo, architecto veritatis, inventore consectetur magnam dolores ipsam enim iure velit nesciunt earum id? Voluptates tempore sed necessitatibus omnis.</p>
+            </div>
+        </div>
+            <div>
+            <div onclick="ouvrir_qustion(6)" 
+                class="bg-lBrown rounded-2xl flex justify-between  items-center transition ease-in-out delay-75 hover:translate-y-1 hover:scale-110 duration-75 hover:bg-dBrown ">
+                <p class=" pl-3 text-3xl font-Mont">why i can trust in our company ?</p>
+                <img class="opacity-60 w-14 h-14 hover:opacity-100" src="/public/assets/images/FAQs/ouvrir .png"
+                    alt="ouvrir">
+            </div>
+            <div id="Q6" class="border-gray border-x-4 border-b-4 rounded-xl hidden">
+                <p class="mx-9 mb-4"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam vero vel dignissimos quod aliquid, deleniti molestiae doloremque laboriosam. Quam accusantium cumque et repudiandae minus odio autem quo blanditiis. Dolore, tempore?lorem Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime doloremque modi, quo, architecto veritatis, inventore consectetur magnam dolores ipsam enim iure velit nesciunt earum id? Voluptates tempore sed necessitatibus omnis.</p>
+            </div>
+        </div>
+        </div>
+    </div>
     </main>
     <footer class="h-36">
 
