--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
 <body class="font-Mont">
 
-    <header class="w-full pt-1 h-fit">
+    <header class="w-full pt-1 h-fit relative z-50">
         <nav class="flex flex-row items-center justify-between px-2 py-2 pt-2 lg:px-12">
             <img class="pl-2 w-36" src="assets/images/logo.png" alt="COMPANY LOGO">
             <ul class="items-center justify-between hidden gap-8 pr-20 text-lg lg:flex">
@@ -35,25 +35,41 @@
         </nav>
     </header>
 
-    <main class="flex flex-col gap-5 h-screen">
+    <main class="flex flex-col gap-5">
 
         <!-- carousel -->
-        <section class="h-400px relative max-w-full ">
-            <img class="flex self-center h-fit -z-50" src="assets/images/homeslides/slide1.jpg" alt="">
-            <div class="homeInfo">
-                <h1
-                    class="pl-1 before:left-0 before:w-1 before:h-full before:absolute before:block before:bg-lBrown text-2xl relative inline-block">
-                    SOFALO Furnitures</h1>
-                <h2 class="text-dBrown tracking-widest italic font-extrabold text-4xl lg:text-6xl max-w-1">NEW
-                    COLLECTION</h2>
-                <a class="active:opacity-50 active:scale-95 transition-all drop-shadow-lg hover:scale-105 hover:bg-white hover:text-lBrown text-xl w-full bg-lBrown rounded text-white text-center"
-                    href="#">SHOP NOW</a>
+        <section class="h-screen mt-[-50px] relative">
+            <div class="list">
+                <div class="listItem active">
+                    <img class="w-full h-full object-cover" src="assets/images/homeslides/slide1.jpg" alt="">
+                    <div class="itemContent">
+                        <h2 class="mb-4 tracking-[10px] font-light border-l-lBrown border-l-4">SOFALO</h2>
+                        <h3 class="mb-2 text-dBrown text-4xl md:text-8xl font-bold italic tracking-widest">NEW COLLECTION</h3>
+                        <a class="carBtn" href="">SHOP NOW</a>
+                    </div>
+                </div>
+                <div class="listItem">
+                    <img class="w-full h-full object-cover" src="assets/images/homeslides/slide2.jpg" alt="">
+                    <div class="itemContent">
+                        <h2 class="mb-4 tracking-[10px] font-light border-l-lBrown border-l-4">SOFALO</h2>
+                        <h3 class="mb-2 text-dBrown text-4xl md:text-8xl font-bold italic tracking-widest">NEW COLLECTION</h3>
+                        <a class="carBtn" href="">SHOP NOW</a>
+                    </div>
+                </div>
+                <div class="listItem">
+                    <img class="w-full h-full object-cover" src="assets/images/homeslides/slide3.jpg" alt="">
+                    <div class="itemContent">
+                        <h2 class="mb-4 tracking-[10px] font-light border-l-lBrown border-l-4">SOFALO</h2>
+                        <h3 class="mb-2 text-dBrown text-4xl md:text-8xl font-bold italic tracking-widest">NEW COLLECTION</h3>
+                        <a class="carBtn" href="">SHOP NOW</a>
+                    </div>
+                </div>
             </div>
         </section>
         <!--  -->
 
         <!-- hot products -->
-        <section class="flex flex-col justify-center m-auto items-center">
+        <section class="flex flex-col justify-center m-auto mt-[-30px] items-center">
             <h2 class="productHeading">HOT PRODUCTS</h2>
 
             <!-- container -->
@@ -221,7 +237,8 @@
         </section>
 
         <!-- footer -->
-        <footer class="flex flex-col justify-between w-full border-2 border-lBrown m-auto pt-10 px-[8rem]">
+        <footer class="flex flex-col justify-between items-center w-full border-2 border-lBrown m-auto pt-10 px-12">
+
            <div class="flex flex-col justify-center items-center lg:items-baseline lg:flex-row gap-12">
              <!-- home -->
              <div class="flex flex-col text-gray-400 gap-2 w-1/3">
@@ -279,6 +296,8 @@
 
         </footer>
     </main>
+
+    <script src="assets/js/carousel.js"></script>
 </body>
 
 </html>
