ajout de la deuxieme section avec sa photo

--- a/public/about.html
+++ b/public/about.html
@@ -36,6 +36,17 @@
       </div>
     </section>
 
+    <!-- Our Mission Section -->
+    <section class="flex flex-col md:flex-row space-y-6 md:space-y-0 md:space-x-8">
+      <div class="md:w-1/2 space-y-2">
+        <p class="text-sm font-semibold text-yellow-600">WE DESIGN FURNITURE</p>
+        <h2 class="text-2xl font-bold text-gray-900">OUR MISSION</h2>
+        <p class="font-sans " >Our mission at SOFALO is to help you create a home that reflects your style and personality. We offer a curated selection of quality furniture and decor that blend beauty, comfort, and affordability, making it easy to transform any space into one you love.</p>
+      </div>
+      <img src="./assets/images/aboutimages/ABOUT4.webp" alt="Our Mission Image" class="w-full md:w-1/2 h-64 object-cover">
+    </section>
+
+    
   </main>
 
 <script src="./assets/about.js/script.js"></script>
