ajout de la 3eme section aves photo

--- a/public/about.html
+++ b/public/about.html
@@ -46,7 +46,17 @@
       <img src="./assets/images/aboutimages/ABOUT4.webp" alt="Our Mission Image" class="w-full md:w-1/2 h-64 object-cover">
     </section>
 
-    
+    <!-- Our Products Section -->
+    <section class="flex flex-col md:flex-row space-y-6 md:space-y-0 md:space-x-8 font-Mont">
+      <img src="./assets/images/aboutimages/ABOUT 3.webp" alt="Our Products Image" class="w-full md:w-1/2 h-64 object-cover">
+      <div class="md:w-1/2 space-y-2">
+        <p class="text-sm font-semibold text-yellow-600 font-Mont">WE DESIGN FURNITURE</p>
+        <h2 class="text-2xl font-bold text-gray-900 font-Mont">OUR PRODUCTS</h2>
+        <p class="font-sans " >We believe everyone deserves a comfortable, beautiful, and functional home. Our mission is to offer high-quality furniture and accessories at affordable prices, so everyone can create a space that reflects who they are.</p>
+      </div>
+    </section>
+
+  
   </main>
 
 <script src="./assets/about.js/script.js"></script>
