ajout de la derniere section dans about avec photo correspandante

--- a/public/about.html
+++ b/public/about.html
@@ -56,7 +56,15 @@
       </div>
     </section>
 
-  
+    <!-- Our Team Section -->
+    <section class="flex flex-col md:flex-row space-y-6 md:space-y-0 md:space-x-8">
+      <div class="md:w-1/2 space-y-2">
+        <p class="text-sm font-semibold text-yellow-600 font-Mont">WE DESIGN FURNITURE</p>
+        <h2 class="text-2xl font-bold text-gray-900">OUR TEAM</h2>
+        <p class="font-sans " >Our team is a passionate group of designers, makers, and home enthusiasts dedicated to bringing your vision to life with shared commitment to quality. We’re here to support you at every step, from inspiration to delivery, ensuring your home feels as welcoming and as unique as the pieces you bring into your home.</p>
+      </div>
+      <img src="./assets/images/aboutimages/teams about.jpg" alt="Our Team Image" class="w-full md:w-1/2 h-64 object-cover">
+    </section>
   </main>
 
 <script src="./assets/about.js/script.js"></script>
