added the animations for the homepage carousel

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+
     <title>Document</title>
 </head>
 
@@ -45,23 +47,23 @@
                     <div class="itemContent">
                         <h2 class="mb-4 tracking-[10px] font-light border-l-lBrown border-l-4">SOFALO</h2>
                         <h3 class="mb-2 text-dBrown text-4xl md:text-8xl font-bold italic tracking-widest">NEW COLLECTION</h3>
-                        <a class="carBtn" href="">SHOP NOW</a>
+                        <a class="carBtn bg-lBrown" href="">SHOP NOW</a>
                     </div>
                 </div>
                 <div class="listItem">
                     <img class="w-full h-full object-cover" src="assets/images/homeslides/slide2.jpg" alt="">
                     <div class="itemContent">
                         <h2 class="mb-4 tracking-[10px] font-light border-l-lBrown border-l-4">SOFALO</h2>
-                        <h3 class="mb-2 text-dBrown text-4xl md:text-8xl font-bold italic tracking-widest">NEW COLLECTION</h3>
-                        <a class="carBtn" href="">SHOP NOW</a>
+                        <h3 class="mb-2 text-cyan-600 text-4xl md:text-8xl font-bold italic tracking-widest">HOT PRODUCTS</h3>
+                        <a class="carBtn bg-cyan-400" href="">SHOP NOW</a>
                     </div>
                 </div>
                 <div class="listItem">
                     <img class="w-full h-full object-cover" src="assets/images/homeslides/slide3.jpg" alt="">
                     <div class="itemContent">
                         <h2 class="mb-4 tracking-[10px] font-light border-l-lBrown border-l-4">SOFALO</h2>
-                        <h3 class="mb-2 text-dBrown text-4xl md:text-8xl font-bold italic tracking-widest">NEW COLLECTION</h3>
-                        <a class="carBtn" href="">SHOP NOW</a>
+                        <h3 class="mb-2 text-green-600 text-4xl md:text-8xl font-bold italic tracking-widest">AUTUMN COLLECTION</h3>
+                        <a class="carBtn bg-green-400" href="">SHOP NOW</a>
                     </div>
                 </div>
             </div>
