small changes and fixes to the animations

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
                 <li><a class="navItem" href="#">CONTACT</a></li>
             </ul>
 
-            <div class="flex justify-between gap-4 ">
+            <div class="flex justify-between gap-10 ">
                 <div class="relative flex items-center cursor-pointer">
                     <span
                         class="icon-[iconoir--bag] text-black text-3xl hover:text-lBrown active:text-dBrown transition-all"></span>
@@ -299,7 +299,7 @@
         </footer>
     </main>
 
-    <script src="assets/js/carousel.js"></script>
+    <script src="assets/js/home/carousel.js"></script>
 </body>
 
 </html>
