jai fixer la responsivité de desktop

--- a/public/about.html
+++ b/public/about.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
 </head>
@@ -31,8 +33,8 @@
       <img src="./assets/images/aboutimages/image1ABOUT.jpg" alt="Our Company Image" class="w-full md:w-1/2 h-64 object-cover">
       <div class="md:w-1/2 space-y-2">
         <p class="text-sm font-semibold text-yellow-600">WE DESIGN FURNITURE</p>
-        <h2 class="text-2xl font-bold  font-sans text-gray-900">OUR COMPANY</h2>
-        <p class="font-sans " >At SOFALO, we believe that every space has the potential to inspire. Our collection of furniture and decor is thoughtfully curated to offer quality, style, and affordability, allowing you to create rooms that feel both personal and inviting. We’re committed to making the process of transforming your home simple, enjoyable, and rewarding.</p>
+        <h2 class="text-2xl font-bold  font-Mont text-gray-900">OUR COMPANY</h2>
+        <p class="font-Mont " >At SOFALO, we believe that every space has the potential to inspire. Our collection of furniture and decor is thoughtfully curated to offer quality, style, and affordability, allowing you to create rooms that feel both personal and inviting. We’re committed to making the process of transforming your home simple, enjoyable, and rewarding.</p>
       </div>
     </section>
 
@@ -41,7 +43,7 @@
       <div class="md:w-1/2 space-y-2">
         <p class="text-sm font-semibold text-yellow-600">WE DESIGN FURNITURE</p>
         <h2 class="text-2xl font-bold text-gray-900">OUR MISSION</h2>
-        <p class="font-sans " >Our mission at SOFALO is to help you create a home that reflects your style and personality. We offer a curated selection of quality furniture and decor that blend beauty, comfort, and affordability, making it easy to transform any space into one you love.</p>
+        <p class="font-Mont " >Our mission at SOFALO is to help you create a home that reflects your style and personality. We offer a curated selection of quality furniture and decor that blend beauty, comfort, and affordability, making it easy to transform any space into one you love.</p>
       </div>
       <img src="./assets/images/aboutimages/ABOUT4.webp" alt="Our Mission Image" class="w-full md:w-1/2 h-64 object-cover">
     </section>
@@ -52,7 +54,7 @@
       <div class="md:w-1/2 space-y-2">
         <p class="text-sm font-semibold text-yellow-600 font-Mont">WE DESIGN FURNITURE</p>
         <h2 class="text-2xl font-bold text-gray-900 font-Mont">OUR PRODUCTS</h2>
-        <p class="font-sans " >We believe everyone deserves a comfortable, beautiful, and functional home. Our mission is to offer high-quality furniture and accessories at affordable prices, so everyone can create a space that reflects who they are.</p>
+        <p class="font-Mont " >We believe everyone deserves a comfortable, beautiful, and functional home. Our mission is to offer high-quality furniture and accessories at affordable prices, so everyone can create a space that reflects who they are.</p>
       </div>
     </section>
 
@@ -61,13 +63,14 @@
       <div class="md:w-1/2 space-y-2">
         <p class="text-sm font-semibold text-yellow-600 font-Mont">WE DESIGN FURNITURE</p>
         <h2 class="text-2xl font-bold text-gray-900">OUR TEAM</h2>
-        <p class="font-sans " >Our team is a passionate group of designers, makers, and home enthusiasts dedicated to bringing your vision to life with shared commitment to quality. We’re here to support you at every step, from inspiration to delivery, ensuring your home feels as welcoming and as unique as the pieces you bring into your home.</p>
+        <p class="font-Mont " >Our team is a passionate group of designers, makers, and home enthusiasts dedicated to bringing your vision to life with shared commitment to quality. We’re here to support you at every step, from inspiration to delivery, ensuring your home feels as welcoming and as unique as the pieces you bring into your home.</p>
       </div>
       <img src="./assets/images/aboutimages/teams about.jpg" alt="Our Team Image" class="w-full md:w-1/2 h-64 object-cover">
     </section>
   </main>
 
 <script src="./assets/about.js/script.js"></script>
+
 
 
     
