jai fixer la responsivité de mobile

--- a/public/about.html
+++ b/public/about.html
@@ -32,9 +32,9 @@
     <section class="flex flex-col md:flex-row space-y-6 md:space-y-0 md:space-x-8">
       <img src="./assets/images/aboutimages/image1ABOUT.jpg" alt="Our Company Image" class="w-full md:w-1/2 h-64 object-cover">
       <div class="md:w-1/2 space-y-2">
-        <p class="text-sm font-semibold text-yellow-600">WE DESIGN FURNITURE</p>
+        <p class="text-sm font-semibold text-yellow-600">W3 DESIGN FURNITURE</p>
         <h2 class="text-2xl font-bold  font-Mont text-gray-900">OUR COMPANY</h2>
-        <p class="font-Mont " >At SOFALO, we believe that every space has the potential to inspire. Our collection of furniture and decor is thoughtfully curated to offer quality, style, and affordability, allowing you to create rooms that feel both personal and inviting. We’re committed to making the process of transforming your home simple, enjoyable, and rewarding.</p>
+        <p class="font-Mont " >AT SOFALO, we believe that every space has the potential to inspire. Our collection of furniture and decor is thoughtfully curated to offer quality, style, and affordability, allowing you to create rooms that feel both personal and inviting. We’re committed to making the process of transforming your home simple, enjoyable, and rewarding.</p>
       </div>
     </section>
 
