--- a/public/AllProducts.html
+++ b/public/AllProducts.html
@@ -34,7 +34,7 @@
         <div class="flex flex-col md:flex-row justify-around items-center gap-4 md:gap-0">
             <div class="shadow-lg rounded-3xl border border-SoftGray focus:border-gray-500 w-full md:w-[20%] flex items-center">
                 <span class="icon-[ic--round-search] text-2xl text-SoftGray ml-4"></span>
-                <input type="text" placeholder="Search" class="focus:outline-none bg-transparent px-4 py-2 w-full">
+                <input id="searchInput" type="text" placeholder="Search" class="focus:outline-none bg-transparent px-4 py-2 w-full">
             </div>
             <div class="flex gap-5 justify-center mt-2 md:mt-0">
                 <!-- Sort -->
@@ -68,7 +68,7 @@
         </div>
         
     </div>
-    
+
     <!-- Product cards Container -->
      <div>
          <div id="card" class="container max-w-full mx-auto justify-between grid grid-cols-1 gap-20 sm:grid-cols-2 md:grid-cols-3 mt-8 px-4 md:px-0">
