add a sort function that sort the products alphabitically form A to Z

--- a/public/AllProducts.html
+++ b/public/AllProducts.html
@@ -51,10 +51,10 @@
         
                 <!-- Sort Options-->
                 <div id="sortOptions" style="display: none;" class="absolute mt-10 bg-white shadow-md rounded-lg w-[150px]">
-                    <p class="sort-option px-4 py-2 hover:bg-lBrown hover:text-white cursor-pointer">Price: High to Low</p>
-                    <p class="sort-option px-4 py-2 hover:bg-lBrown hover:text-white cursor-pointer">Price: Low to High</p>
-                    <p class="sort-option px-4 py-2 hover:bg-lBrown hover:text-white cursor-pointer">A-Z</p>
-                    <p class="sort-option px-4 py-2 hover:bg-lBrown hover:text-white cursor-pointer">Z-A</p>
+                    <p id="HTL" class="sort-option px-4 py-2 hover:bg-lBrown hover:text-white cursor-pointer">Price: High to Low</p>
+                    <p id="LTH" class="sort-option px-4 py-2 hover:bg-lBrown hover:text-white cursor-pointer">Price: Low to High</p>
+                    <p id="AZ" class="sort-option px-4 py-2 hover:bg-lBrown hover:text-white cursor-pointer">A-Z</p>
+                    <p id="ZA" class="sort-option px-4 py-2 hover:bg-lBrown hover:text-white cursor-pointer">Z-A</p>
                 </div>
                 <!-- Filter Options-->
                 <div id="filterOptions" style="display: none;" class="absolute mt-10 bg-white shadow-md rounded-lg w-[150px]">
